--- a/starter/03-CSS-Fundamentals/challenge_1.html
+++ b/starter/03-CSS-Fundamentals/challenge_1.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="challange_style.css" />
-    <title>Challenge #2</title>
+    <title>Challenge #1</title>
   </head>
   <body>
-    <article>
-      <h2>Converse Chuck Taylor All Star Low Top</h2>
+    <article class="product">
+      <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
 
       <img
         src="img/challenges.jpg"
@@ -16,26 +16,28 @@
         style="height: 250px; width: 250px"
       />
 
-      <p><strong>&dollar; 65.00</strong></p>
+      <p class="price"><strong>&dollar;65.00</strong></p>
 
-      <p>Free shipping</p>
+      <p class="shipping">Free shipping</p>
 
       <p>
         Ready to dress up or down, these classic canvas Chucks are an everyday
         wardrobe staple.
       </p>
 
-      <a href="https://www.converse.com">More informations &rarr;</a>
+      <a class="more-info" href="https://www.converse.com"
+        >More informations &rarr;</a
+      >
 
-      <h3>Product details</h3>
+      <h3 class="details-title">Product details</h3>
 
-      <ul>
+      <ul class="details-list">
         <li>Lightweight, durable canvas sneaker</li>
         <li>Lightly padded footbed for added comfort</li>
         <li>Iconic Chuck Taylor ankle patch</li>
       </ul>
 
-      <button>Add to cart</button>
+      <button class="add-cart">Add to cart</button>
     </article>
   </body>
 </html>
