--- a/starter/03-CSS-Fundamentals/challenge.html
+++ b/starter/03-CSS-Fundamentals/challenge.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="challange_style.css" />
-    <title>Challenge #1</title>
+    <title>Challenge</title>
   </head>
   <body>
     <div class="container">
@@ -21,6 +21,8 @@
 
         <p class="shipping">Free shipping</p>
 
+        <p class="sale">SALE</p>
+
         <p>
           Ready to dress up or down, these classic canvas Chucks are an everyday
           wardrobe staple.
@@ -29,6 +31,15 @@
         <a class="more-info" href="https://www.converse.com"
           >More informations &rarr;</a
         >
+
+        <div class="box-container">
+          <div class="box"></div>
+          <div class="box color-blue"></div>
+          <div class="box color-red"></div>
+          <div class="box color-yellow"></div>
+          <div class="box color-green"></div>
+          <div class="box color-brown"></div>
+        </div>
 
         <h3 class="details-title">Product details</h3>
 
