--- a/starter/04-CSS-Layouts/challenge.html
+++ b/starter/04-CSS-Layouts/challenge.html
@@ -9,51 +9,51 @@
   <body>
     <article class="product">
       <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
-      <div class="container">
-        <img
-          src="img/challenges.jpg"
-          alt="Shoes"
-          style="height: 250px; width: 250px"
-          class="product-image"
-        />
-        <div class="product-info">
-          <div class="price-container">
-            <p class="price"><strong>&dollar;65.00</strong></p>
+      <!-- <div class="container"> -->
+      <img
+        src="img/challenges.jpg"
+        alt="Shoes"
+        style="height: 250px; width: 250px"
+        class="product-image"
+      />
+      <div class="product-info">
+        <div class="price-container">
+          <p class="price"><strong>&dollar;65.00</strong></p>
 
-            <p class="shipping">Free shipping</p>
-          </div>
-
-          <p class="sale">SALE</p>
-
-          <p class="product-description">
-            Ready to dress up or down, these classic canvas Chucks are an
-            everyday wardrobe staple.
-          </p>
-
-          <a class="more-info" href="https://www.converse.com"
-            >More informations &rarr;</a
-          >
-
-          <div class="box-container">
-            <div class="box"></div>
-            <div class="box color-blue"></div>
-            <div class="box color-red"></div>
-            <div class="box color-yellow"></div>
-            <div class="box color-green"></div>
-            <div class="box color-brown"></div>
-          </div>
+          <p class="shipping">Free shipping</p>
         </div>
 
-        <div class="product-details">
-          <h3 class="details-title">Product details</h3>
+        <p class="sale">SALE</p>
 
-          <ul class="details-list">
-            <li>Lightweight, durable canvas sneaker</li>
-            <li>Lightly padded footbed for added comfort</li>
-            <li>Iconic Chuck Taylor ankle patch</li>
-          </ul>
+        <p class="product-description">
+          Ready to dress up or down, these classic canvas Chucks are an everyday
+          wardrobe staple.
+        </p>
+
+        <a class="more-info" href="https://www.converse.com"
+          >More informations &rarr;</a
+        >
+
+        <div class="box-container">
+          <div class="box"></div>
+          <div class="box color-blue"></div>
+          <div class="box color-red"></div>
+          <div class="box color-yellow"></div>
+          <div class="box color-green"></div>
+          <div class="box color-brown"></div>
         </div>
       </div>
+
+      <div class="product-details">
+        <h3 class="details-title">Product details</h3>
+
+        <ul class="details-list">
+          <li>Lightweight, durable canvas sneaker</li>
+          <li>Lightly padded footbed for added comfort</li>
+          <li>Iconic Chuck Taylor ankle patch</li>
+        </ul>
+      </div>
+      <!-- </div> -->
 
       <button class="add-cart">Add to cart</button>
     </article>
