--- a/starter/09-Omnifood-Optimizations/index.html
+++ b/starter/09-Omnifood-Optimizations/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hr">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    <!-- Always include this line of code!!! -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
 
@@ -17,13 +15,14 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css" />
 
+    <!-- ICONS -->
     <script
       type="module"
-      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
     ></script>
     <script
-      nomodule=""
-      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
 
     <title>Omnifood</title>
@@ -31,16 +30,16 @@
   <body>
     <header class="header">
       <a href="#">
-        <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
+        <img class="logo" src="img/omnifood-logo.png" alt="Omnifood logo" />
       </a>
 
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">How it works</a></li>
-          <li><a class="main-nav-link" href="#">Meals</a></li>
-          <li><a class="main-nav-link" href="#">Testimonials</a></li>
-          <li><a class="main-nav-link" href="#">Pricing</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+          <li><a href="#" class="main-nav-link">How it works</a></li>
+          <li><a href="#" class="main-nav-link">Meals</a></li>
+          <li><a href="#" class="main-nav-link">Testimonials</a></li>
+          <li><a href="#" class="main-nav-link">Pricing</a></li>
+          <li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
         </ul>
       </nav>
 
@@ -49,7 +48,6 @@
         <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
       </button>
     </header>
-
     <main>
       <section class="section-hero">
         <div class="hero">
@@ -62,9 +60,9 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn--full margin-right-sm"
-              >Start eating well</a
-            >
+            <a href="#" class="btn btn--full margin-right-sm">
+              Start eating well
+            </a>
             <a href="#" class="btn btn--outline">Learn more &darr;</a>
             <div class="delivered-meals">
               <div class="delivered-imgs">
@@ -83,8 +81,8 @@
           <div class="hero-img-box">
             <img
               src="img/hero.png"
+              alt="Woman enjoying food, meals in storafe container, and food bowls on a table"
               class="hero-img"
-              alt="Woman enjoying food, meals in storage container, and food bowls on a table"
             />
           </div>
         </div>
@@ -131,25 +129,23 @@
               matter what diet you follow!
             </p>
           </div>
-
           <div class="step-img-box">
             <img
+              class="step-img"
               src="img/app/app-screen-1.png"
+              alt="Iphone app preferences selection screen"
+            />
+          </div>
+          <!-- STEP 02 -->
+
+          <div class="step-img-box">
+            <img
               class="step-img"
-              alt="iPhone app
-            preferences selection screen"
+              src="img/app/app-screen-2.png"
+              alt="Iphone app preferences selection screen"
             />
           </div>
 
-          <!-- STEP 02 -->
-          <div class="step-img-box">
-            <img
-              src="img/app/app-screen-2.png"
-              class="step-img"
-              alt="iPhone app
-            meal approving plan screen"
-            />
-          </div>
           <div class="step-text-box">
             <p class="step-number">02</p>
             <h3 class="heading-tertiary">Approve your weekly meal plan</h3>
@@ -167,15 +163,14 @@
             <p class="step-description">
               Best chefs in town will cook your selected meal every day, and we
               will deliver it to your door whenever works best for you. You can
-              change delivery schedule and address daily!
+              change delivery schedule and address daily!!
             </p>
           </div>
           <div class="step-img-box">
             <img
-              src="img/app/app-screen-3.png"
               class="step-img"
-              alt="iPhone app
-            delivery screen"
+              src="img/app/app-screen-3.png"
+              alt="Iphone app preferences selection screen"
             />
           </div>
         </div>
@@ -215,17 +210,16 @@
                 </li>
                 <li class="meal-attribute">
                   <ion-icon class="meal-icon" name="star-outline"></ion-icon>
-                  <span><strong>4.9</strong> rating (537)</span>
+                  <span><strong>4.9 </strong> rating (537)</span>
                 </li>
               </ul>
             </div>
           </div>
-
           <div class="meal">
             <img
               src="img/meals/meal-2.jpg"
               class="meal-img"
-              alt="Avocado Salad"
+              alt="Avocado Salads"
             />
             <div class="meal-content">
               <div class="meal-tags">
@@ -252,17 +246,16 @@
               </ul>
             </div>
           </div>
-
           <div class="diets">
             <h3 class="heading-tertiary">Works with any diet:</h3>
             <ul class="list">
               <li class="list-item">
-                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>Vegetarian</span>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegetarian</span>
               </li>
               <li class="list-item">
-                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>Vegan</span>
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegan</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
@@ -304,14 +297,13 @@
       <section class="section-testimonials">
         <div class="testimonials-container">
           <span class="subheading">Testimonials</span>
-          <h2 class="heading-secondary">Once you try it, you can't go back</h2>
-
+          <h2 class="heading-secondary">Once you try it, you can't go back!</h2>
           <div class="testimonials">
             <figure class="testimonial">
               <img
                 class="testimonial-img"
-                alt="Photo of customer Dave Bryson"
                 src="img/customers/dave.jpg"
+                alt="Photo of a customer Dave Bryson"
               />
               <blockquote class="testimonial-text">
                 Inexpensive, healthy and great-tasting meals, without even
@@ -323,8 +315,8 @@
             <figure class="testimonial">
               <img
                 class="testimonial-img"
-                alt="Photo of customer Ben Hadley"
                 src="img/customers/ben.jpg"
+                alt="Photo of a customer Ben Hadley"
               />
               <blockquote class="testimonial-text">
                 The AI algorithm is crazy good, it chooses the right meals for
@@ -336,8 +328,8 @@
             <figure class="testimonial">
               <img
                 class="testimonial-img"
-                alt="Photo of customer Steve Miller"
                 src="img/customers/steve.jpg"
+                alt="Photo of a customer Steve Miller"
               />
               <blockquote class="testimonial-text">
                 Omnifood is a life saver! I just started a company, so there's
@@ -349,8 +341,8 @@
             <figure class="testimonial">
               <img
                 class="testimonial-img"
-                alt="Photo of customer Hannah Smith"
                 src="img/customers/hannah.jpg"
+                alt="Photo of a customer Hannah Smith"
               />
               <blockquote class="testimonial-text">
                 I got Omnifood for the whole family, and it frees up so much
@@ -360,91 +352,82 @@
             </figure>
           </div>
         </div>
-
         <div class="gallery">
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-1.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of beautifly arranged food"
             />
             <!-- <figcaption>Caption</figcaption> -->
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-2.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of beautifly arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-3.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of beautifly arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-4.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of beautifly arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-5.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of beautifly arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-6.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of beautifly arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-7.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of beautifly arranged food"
             />
           </figure>
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-8.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of beautifly arranged food"
             />
           </figure>
+
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-9.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of beautifly arranged food"
             />
           </figure>
+
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-10.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of beautifly arranged food"
             />
           </figure>
+
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-11.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of beautifly arranged food"
             />
           </figure>
+
           <figure class="gallery-item">
             <img
               src="img/gallery/gallery-12.jpg"
-              alt="Photo of beautifully
-            arranged food"
+              alt="Photo of beautifly arranged food"
             />
           </figure>
         </div>
@@ -454,7 +437,7 @@
         <div class="container">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">
-            Eating well without breaking the bank
+            Eating well without breaking the bank!
           </h2>
         </div>
 
@@ -465,6 +448,7 @@
               <p class="plan-price"><span>$</span>399</p>
               <p class="plan-text">per month. That's just $13 per meal!</p>
             </header>
+
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
@@ -472,7 +456,7 @@
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
-                <span>Order from 11am to 9pm</span>
+                <span>Order from 11am and 9pm</span>
               </li>
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
@@ -483,16 +467,16 @@
               </li>
             </ul>
             <div class="plan-sing-up">
-              <a href="#" class="btn btn--full">Start eating well</a>
+              <a href="#" class="btn btn--full"> Start eating well </a>
             </div>
           </div>
-
           <div class="pricing-plan pricing-plan--complete">
             <header class="plan-header">
               <p class="plan-name">Complete</p>
               <p class="plan-price"><span>$</span>649</p>
               <p class="plan-text">per month. That's just $11 per meal!</p>
             </header>
+
             <ul class="list">
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon>
@@ -512,7 +496,7 @@
               </li>
             </ul>
             <div class="plan-sing-up">
-              <a href="#" class="btn btn--full">Start eating well</a>
+              <a href="#" class="btn btn--full"> Start eating well </a>
             </div>
           </div>
         </div>
@@ -581,7 +565,6 @@
                     required
                   />
                 </div>
-
                 <div>
                   <label for="email">Email address</label>
                   <input
@@ -591,23 +574,19 @@
                     required
                   />
                 </div>
-
                 <div>
                   <label for="select-where">Where did you hear from us?</label>
-                  <select id="select-where" required>
-                    <option value="">Please choose one option:</option>
+                  <select name="" id="select-where" required>
+                    <option value="">Please choose one option</option>
                     <option value="friends">Friends and family</option>
-                    <option value="youtube">YouTube video</option>
-                    <option value="podcast">Podcast</option>
+                    <option value="Youtube">Youtube video</option>
+                    <option value="Podcast">Podcast</option>
                     <option value="ad">Facebook ad</option>
                     <option value="others">Others</option>
                   </select>
                 </div>
 
                 <button class="btn btn--form">Sign up now</button>
-
-                <!-- <input type="checkbox" />
-                <input type="number" /> -->
               </form>
             </div>
             <div
@@ -624,7 +603,7 @@
       <div class="container grid grid--footer">
         <div class="logo-col">
           <a href="#" class="footer-logo">
-            <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
+            <img class="logo" src="img/omnifood-logo.png" alt="Omnifood logo" />
           </a>
 
           <ul class="social-links">
@@ -649,7 +628,6 @@
             Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
           </p>
         </div>
-
         <div class="address-col">
           <p class="footer-heading">Contact us</p>
           <address class="contacts">
@@ -657,15 +635,15 @@
               623 Harrison St., 2nd Floor, San Francisco, CA 94107
             </p>
             <p>
-              <a class="footer-link" href="tel:415-201-6370">415-201-6370</a
-              ><br />
+              <a class="footer-link" href="tel:415-201-6370">415-201-6370</a>
+            </p>
+            <p>
               <a class="footer-link" href="mailto:hello@omnifood.com"
                 >hello@omnifood.com</a
               >
             </p>
           </address>
         </div>
-
         <nav class="nav-col">
           <p class="footer-heading">Account</p>
           <ul class="footer-nav">
@@ -675,7 +653,6 @@
             <li><a class="footer-link" href="#">Android app</a></li>
           </ul>
         </nav>
-
         <nav class="nav-col">
           <p class="footer-heading">Company</p>
           <ul class="footer-nav">
@@ -685,11 +662,10 @@
             <li><a class="footer-link" href="#">Careers</a></li>
           </ul>
         </nav>
-
         <nav class="nav-col">
           <p class="footer-heading">Resources</p>
           <ul class="footer-nav">
-            <li><a class="footer-link" href="#">Recipe directory </a></li>
+            <li><a class="footer-link" href="#">Recipe directory</a></li>
             <li><a class="footer-link" href="#">Help center</a></li>
             <li><a class="footer-link" href="#">Privacy & terms</a></li>
           </ul>
